--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body {
 
 .accountName {
 	right: 0;
-	width: 64px;
+	width: 63px;
 	display: inline-block;
 	vertical-align: middle;
 }
@@ -209,7 +209,7 @@ body {
   visibility: hidden;
   width: 160px;
   background-color: #555;
-  color: #fff;
+  color: #fffff;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
@@ -276,12 +276,11 @@ body {
   to {opacity:1 ;}
 }
 
-.map {
-	position: relative;
+#map {
 	height: 100%;
-	width: calc(100% - 40px);
-	display: inline-block;
-	margin: 0 20px;
+	z-index: -1;
+	width: 100%;
+	display: block;
 }
 
 .footer {
